--- a/css/styles.css
+++ b/css/styles.css
@@ -41,8 +41,12 @@ form {;
 }
 
 .jumbotron {
-  margin: 10rem auto;
+  margin: 5rem auto 2rem;
   width: 90%;
+}
+
+.success, .unclear {
+  display: none;
 }
 
 
