--- a/css/styles.css
+++ b/css/styles.css
@@ -8,17 +8,12 @@ form {;
 
 .formDiv {
   padding: 1.5rem;
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-  border-radius: 5px;
 }
 
 .formDiv h1{
   text-align: center;
   font-family: verdana;
   font-weight: bold;
-  font-size: 300%;
-  margin-bottom: 3rem;
 }
 
 .basicDisplay {
@@ -45,8 +40,8 @@ form {;
 }
 
 .jumbotron {
-  margin: 5rem auto 2rem;
-  width: 90%;
+  margin: 2rem auto 2rem;
+  width: 95%;
 }
 
 .success, .unclear {
@@ -93,6 +88,22 @@ form {;
 @media screen and (min-width: 768px){
   form {
     width: 80%;
+  }
+
+  .formDiv {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+    border-radius: 5px;
+  }
+
+  .formDiv h1 {
+    font-size: 300%;
+    margin-bottom: 3rem;
+  }
+
+  .jumbotron {
+    margin-top: 5rem;
+    width: 90%;
   }
 }
 
