--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,13 @@ body {
   background-color: #2e4045;
 }
 
-form {;
+form {
   margin: 0 auto;
+}
+
+footer {
+  font-size: x-small;
+  text-align: center;
 }
 
 .formDiv {
